# CSnake

./: .gitignore  CMakeLists.txt  README.md
include/: deque.h  fruit.h  gameFunctions.h  player.h
src/: deque.c  fruit.c  gameFunctions.c  main.c  player.c
